force-app/main/default/objects/Account/fields/HotprofileID__c.field-meta.xml
<CustomField>
    <fullName>HotprofileID__c</fullName>
    <label>HotprofileID(得意先)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>