force-app/main/default/objects/Account/fields/ID_parent18__c.field-meta.xml
<CustomField>
    <fullName>ID_parent18__c</fullName>
    <formula>CASESAFEID( ParentId )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>親取引先ID（18桁）</label>
    <type>Text</type>
</CustomField>