force-app/main/default/objects/Account/fields/input_rate_IssueHearing2__c.field-meta.xml
<CustomField>
    <fullName>input_rate_IssueHearing2__c</fullName>
    <defaultValue>0</defaultValue>
    <label>入力率（課題ヒアリング（見積作成/発注形態））</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>