force-app/main/default/objects/Account/fields/isNotificationTarget__c.field-meta.xml
<CustomField>
    <fullName>isNotificationTarget__c</fullName>
    <defaultValue>false</defaultValue>
    <description>非BuildApp部門管理の取引先への通知対象flg</description>
    <label>非BuildApp部門管理の取引先への通知対象flg</label>
    <type>Checkbox</type>
</CustomField>