force-app/main/default/objects/Account/fields/isTargetToShareInfo__c.field-meta.xml
<CustomField>
    <fullName>isTargetToShareInfo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>その他顧客情報共有flg</label>
    <type>Checkbox</type>
</CustomField>