force-app/main/default/objects/Account/fields/Ju_2_4__c.field-meta.xml
<CustomField>
    <fullName>Ju_2_4__c</fullName>
    <label>2×4</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>