force-app/main/default/objects/Account/fields/JU_AccountCount__c.field-meta.xml
<CustomField>
    <fullName>JU_AccountCount__c</fullName>
    <description>得意先を1としてカウント
レポートで使用</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>*得意先カウント</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>