force-app/main/default/objects/Account/fields/JU_AccountExternalID__c.field-meta.xml
<CustomField>
    <fullName>JU_AccountExternalID__c</fullName>
    <externalId>true</externalId>
    <label>住環境用取込（外部キー)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>