force-app/main/default/objects/Account/fields/JU_AccountID__c.field-meta.xml
<CustomField>
    <fullName>JU_AccountID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>会社ID_JU</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>