force-app/main/default/objects/Account/fields/JU_AccountOpening__c.field-meta.xml
<CustomField>
    <fullName>JU_AccountOpening__c</fullName>
    <defaultValue>false</defaultValue>
    <label>口座開設</label>
    <type>Checkbox</type>
</CustomField>