force-app/main/default/objects/Account/fields/JU_AccountOwnerRole__c.field-meta.xml
<CustomField>
    <fullName>JU_AccountOwnerRole__c</fullName>
    <formula>JU_OwnerId__r.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>得意先所有者ロール_JU</label>
    <type>Text</type>
</CustomField>