force-app/main/default/objects/Account/fields/JU_AccountType__c.field-meta.xml
<CustomField>
    <fullName>JU_AccountType__c</fullName>
    <label>顧客種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>戦略ターゲット</fullName>
            </value>
            <value>
                <fullName>戦略ターゲット以外</fullName>
            </value>
            <value>
                <fullName>流通店等</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>