force-app/main/default/objects/Account/fields/JU_BPO__c.field-meta.xml
<CustomField>
    <fullName>JU_BPO__c</fullName>
    <label>作図積算BPO件数</label>
    <summarizedField>Opportunity.BPO__c</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>