force-app/main/default/objects/Account/fields/JU_BPOOppNum__c.field-meta.xml
<CustomField>
    <fullName>JU_BPOOppNum__c</fullName>
    <label>住環境_作図積算BPOの商談数</label>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>住環境_作図積算BPO提案</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>