force-app/main/default/objects/Account/fields/JU_BPOteianzumi_del__c.field-meta.xml
<CustomField>
    <fullName>JU_BPOteianzumi_del__c</fullName>
    <formula>OR( JU_BPOteianzumiKari__c
, IF (OR(JU_BPO__c &gt; 0,00NRC000000G92X&gt;0,00NRC000000G95l&gt;0), true, false))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>作図積算BPO提案済み</label>
    <type>Checkbox</type>
</CustomField>