force-app/main/default/objects/Account/fields/JU_CAD__c.field-meta.xml
<CustomField>
    <fullName>JU_CAD__c</fullName>
    <label>使用CAD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ALTA</fullName>
            </value>
            <value>
                <fullName>ATZ</fullName>
            </value>
            <value>
                <fullName>DigiD</fullName>
            </value>
            <value>
                <fullName>JW</fullName>
            </value>
            <value>
                <fullName>WIH</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>