force-app/main/default/objects/Account/fields/JU_CAD_sonota__c.field-meta.xml
<CustomField>
    <fullName>JU_CAD_sonota__c</fullName>
    <label>使用CAD_その他</label>
    <length>200</length>
    <type>Text</type>
</CustomField>