force-app/main/default/objects/Account/fields/Ju_chintai__c.field-meta.xml
<CustomField>
    <fullName>Ju_chintai__c</fullName>
    <label>賃貸</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>