force-app/main/default/objects/Account/fields/Ju_chuumon__c.field-meta.xml
<CustomField>
    <fullName>Ju_chuumon__c</fullName>
    <label>注文</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>