force-app/main/default/objects/Account/fields/JU_Competitors10__c.field-meta.xml
<CustomField>
    <fullName>JU_Competitors10__c</fullName>
    <label>競合先10</label>
    <type>TextArea</type>
</CustomField>