force-app/main/default/objects/Account/fields/JU_Competitors13__c.field-meta.xml
<CustomField>
    <fullName>JU_Competitors13__c</fullName>
    <label>競合先13</label>
    <type>TextArea</type>
</CustomField>