force-app/main/default/objects/Account/fields/JU_Competitors14__c.field-meta.xml
<CustomField>
    <fullName>JU_Competitors14__c</fullName>
    <label>競合先14</label>
    <type>TextArea</type>
</CustomField>