force-app/main/default/objects/Account/fields/JU_CompetitorsMemo__c.field-meta.xml
<CustomField>
    <fullName>JU_CompetitorsMemo__c</fullName>
    <label>備考</label>
    <length>255</length>
    <type>Text</type>
</CustomField>