force-app/main/default/objects/Account/fields/JU_consept__c.field-meta.xml
<CustomField>
    <fullName>JU_consept__c</fullName>
    <label>コンセプト</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>高級</fullName>
            </value>
            <value>
                <fullName>中級</fullName>
            </value>
            <value>
                <fullName>ローコスト</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>