force-app/main/default/objects/Account/fields/JU_ConstructionMethod__c.field-meta.xml
<CustomField>
    <fullName>JU_ConstructionMethod__c</fullName>
    <label>工法</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>在来</fullName>
            </value>
            <value>
                <fullName>２×４</fullName>
            </value>
            <value>
                <fullName>RC</fullName>
            </value>
            <value>
                <fullName>S造</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>