force-app/main/default/objects/Account/fields/JU_ContactFlg__c.field-meta.xml
<CustomField>
    <fullName>JU_ContactFlg__c</fullName>
    <defaultValue>false</defaultValue>
    <label>得意先担当者フラグ_JU</label>
    <type>Checkbox</type>
</CustomField>