force-app/main/default/objects/Account/fields/JU_Contract__c.field-meta.xml
<CustomField>
    <fullName>JU_Contract__c</fullName>
    <label>請負</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>