force-app/main/default/objects/Account/fields/JU_CountBPOhasei__c.field-meta.xml
<CustomField>
    <fullName>JU_CountBPOhasei__c</fullName>
    <label>作図積算BPO由来商談カウント</label>
    <summaryFilterItems>
        <field>Opportunity.JU_BPOhasei__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>