force-app/main/default/objects/Account/fields/JU_CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>JU_CreatedDate__c</fullName>
    <label>個社別管理開始日_JU</label>
    <type>DateTime</type>
</CustomField>