force-app/main/default/objects/Account/fields/JU_CustomerFeaturesFutureEfforts__c.field-meta.xml
<CustomField>
    <fullName>JU_CustomerFeaturesFutureEfforts__c</fullName>
    <label>得意先の特徴・今後の取り組み</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>