force-app/main/default/objects/Account/fields/JU_HeadquartersLocation__c.field-meta.xml
<CustomField>
    <fullName>JU_HeadquartersLocation__c</fullName>
    <label>本社所在地</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Prefectures</valueSetName>
    </valueSet>
</CustomField>