force-app/main/default/objects/Account/fields/JU_HousingCompanyDevelopmentArea__c.field-meta.xml
<CustomField>
    <fullName>JU_HousingCompanyDevelopmentArea__c</fullName>
    <label>住宅会社展開エリア</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>全国</fullName>
            </value>
            <value>
                <fullName>全国以外</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>