force-app/main/default/objects/Account/fields/JU_IsCreatedBPOhasei_del__c.field-meta.xml
<CustomField>
    <fullName>JU_IsCreatedBPOhasei_del__c</fullName>
    <formula>JU_CountBPOhasei__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>作図積算BPO由来商談作成済み</label>
    <type>Checkbox</type>
</CustomField>