force-app/main/default/objects/Account/fields/JU_kisosizai_1StatusK__c.field-meta.xml
<CustomField>
    <fullName>JU_kisosizai_1StatusK__c</fullName>
    <label>基礎資材_生コン仮提案状況</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>JU_ProposalStatus</valueSetName>
    </valueSet>
</CustomField>