force-app/main/default/objects/Account/fields/ju_kouzasakuzyozumi__c.field-meta.xml
<CustomField>
    <fullName>ju_kouzasakuzyozumi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>口座削除済み</label>
    <type>Checkbox</type>
</CustomField>