force-app/main/default/objects/Account/fields/JU_LastActivityDate__c.field-meta.xml
<CustomField>
    <fullName>JU_LastActivityDate__c</fullName>
    <label>最終活動日_JU</label>
    <type>Date</type>
</CustomField>