force-app/main/default/objects/Account/fields/JU_Memo10__c.field-meta.xml
<CustomField>
    <fullName>JU_Memo10__c</fullName>
    <label>特記事項10</label>
    <type>TextArea</type>
</CustomField>