force-app/main/default/objects/Account/fields/JU_Memo11__c.field-meta.xml
<CustomField>
    <fullName>JU_Memo11__c</fullName>
    <label>特記事項11</label>
    <type>TextArea</type>
</CustomField>