force-app/main/default/objects/Account/fields/JU_Memo12__c.field-meta.xml
<CustomField>
    <fullName>JU_Memo12__c</fullName>
    <label>特記事項12</label>
    <type>TextArea</type>
</CustomField>