force-app/main/default/objects/Account/fields/JU_NagataComFlg__c.field-meta.xml
<CustomField>
    <fullName>JU_NagataComFlg__c</fullName>
    <defaultValue>false</defaultValue>
    <label>永田通信フラグ_JU</label>
    <type>Checkbox</type>
</CustomField>