force-app/main/default/objects/Account/fields/ju_nextstep__c.field-meta.xml
<CustomField>
    <fullName>ju_nextstep__c</fullName>
    <label>次のSTEP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>