force-app/main/default/objects/Account/fields/JU_NumberOfConstructionStartsInTheArea__c.field-meta.xml
<CustomField>
    <fullName>JU_NumberOfConstructionStartsInTheArea__c</fullName>
    <label>エリア着工戸数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>