force-app/main/default/objects/Account/fields/JU_NumberOfConstructionStartsPerYear__c.field-meta.xml
<CustomField>
    <fullName>JU_NumberOfConstructionStartsPerYear__c</fullName>
    <label>年間着工戸数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>