force-app/main/default/objects/Account/fields/JU_OwnerId__c.field-meta.xml
<CustomField>
    <fullName>JU_OwnerId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>得意先 所有者_JU</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AChpLp</relationshipName>
    <type>Lookup</type>
</CustomField>