force-app/main/default/objects/Account/fields/JU_prefabricated__c.field-meta.xml
<CustomField>
    <fullName>JU_prefabricated__c</fullName>
    <label>プレハブ工法</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>