force-app/main/default/objects/Account/fields/JU_PrimaryEnergyConsumption__c.field-meta.xml
<CustomField>
    <fullName>JU_PrimaryEnergyConsumption__c</fullName>
    <label>一次エネルギー消費量</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>等級6</fullName>
            </value>
            <value>
                <fullName>等級5</fullName>
            </value>
            <value>
                <fullName>等級4</fullName>
            </value>
            <value>
                <fullName>等級3以下</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>