force-app/main/default/objects/Account/fields/Ju_RC__c.field-meta.xml
<CustomField>
    <fullName>Ju_RC__c</fullName>
    <label>RC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>