force-app/main/default/objects/Account/fields/JU_reort__c.field-meta.xml
<CustomField>
    <fullName>JU_reort__c</fullName>
    <formula>Case( JU_Department__c
,&quot;営業一部&quot; ,&quot;01.営業一部&quot;
,&quot;営業二部&quot; ,&quot;02.営業二部&quot;
,&quot;営業三部&quot; ,&quot;03.営業三部&quot;
,&quot;中日本営業部&quot;,&quot;04.中日本営業部&quot;
,&quot;西日本営業部&quot;,&quot;05.西日本営業部&quot;
,&quot;広島営業所&quot;,&quot;06.広島営業所&quot;
,&quot;九州営業所&quot;,&quot;07.九州営業所&quot;
,&quot;東日本営業部&quot;,&quot;08.東日本営業部&quot;
,&quot;その他&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>担当部署_JU_reort</label>
    <type>Text</type>
</CustomField>