force-app/main/default/objects/Account/fields/JU_Representative__c.field-meta.xml
<CustomField>
    <fullName>JU_Representative__c</fullName>
    <label>代表者_JU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>