force-app/main/default/objects/Account/fields/JU_sakuzusekisanbpo_yusendo__c.field-meta.xml
<CustomField>
    <fullName>JU_sakuzusekisanbpo_yusendo__c</fullName>
    <inlineHelpText>A：最優先
B：今期中対応
C：その他</inlineHelpText>
    <label>作図積算BPO攻略優先度</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>