force-app/main/default/objects/Account/fields/JU_sakuzusekisanbpotaisyou__c.field-meta.xml
<CustomField>
    <fullName>JU_sakuzusekisanbpotaisyou__c</fullName>
    <defaultValue>false</defaultValue>
    <label>作図積算BPO提案対象</label>
    <type>Checkbox</type>
</CustomField>