force-app/main/default/objects/Account/fields/JU_sakuzutaiseigaityusaki__c.field-meta.xml
<CustomField>
    <fullName>JU_sakuzutaiseigaityusaki__c</fullName>
    <label>作図体制_外注先</label>
    <length>255</length>
    <type>Text</type>
</CustomField>