force-app/main/default/objects/Account/fields/JU_SalesCount__c.field-meta.xml
<CustomField>
    <fullName>JU_SalesCount__c</fullName>
    <description>住環境のフェーズが採用（受注）件数をカウント</description>
    <label>過去受注件数(住環境)</label>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>住環境</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>採用（受注）</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>