force-app/main/default/objects/Account/fields/JU_Score1__c.field-meta.xml
<CustomField>
    <fullName>JU_Score1__c</fullName>
    <label>リスクモンスター用評点</label>
    <length>255</length>
    <type>Text</type>
</CustomField>