force-app/main/default/objects/Account/fields/JU_Score2__c.field-meta.xml
<CustomField>
    <fullName>JU_Score2__c</fullName>
    <label>TSR用評点</label>
    <length>255</length>
    <type>Text</type>
</CustomField>