force-app/main/default/objects/Account/fields/JU_sd__c.field-meta.xml
<CustomField>
    <fullName>JU_sd__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SD</label>
    <type>Checkbox</type>
</CustomField>