force-app/main/default/objects/Account/fields/Ju_sdukuri__c.field-meta.xml
<CustomField>
    <fullName>Ju_sdukuri__c</fullName>
    <label>S造</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>