force-app/main/default/objects/Account/fields/JU_Segment__c.field-meta.xml
<CustomField>
    <fullName>JU_Segment__c</fullName>
    <label>セグメント</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>分譲</fullName>
            </value>
            <value>
                <fullName>注文</fullName>
            </value>
            <value>
                <fullName>賃貸</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>