force-app/main/default/objects/Account/fields/JU_sekisantaisei__c.field-meta.xml
<CustomField>
    <fullName>JU_sekisantaisei__c</fullName>
    <label>積算体制</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>監督</fullName>
            </value>
            <value>
                <fullName>材木屋</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>