force-app/main/default/objects/Account/fields/JU_sinseigyoumu__c.field-meta.xml
<CustomField>
    <fullName>JU_sinseigyoumu__c</fullName>
    <label>申請業務</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>内注</fullName>
            </value>
            <value>
                <fullName>外注</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>