force-app/main/default/objects/Account/fields/JU_sinseigyoumugaityusaki__c.field-meta.xml
<CustomField>
    <fullName>JU_sinseigyoumugaityusaki__c</fullName>
    <label>申請業務_外注先</label>
    <length>255</length>
    <type>Text</type>
</CustomField>