force-app/main/default/objects/Account/fields/JU_soshikitaisei__c.field-meta.xml
<CustomField>
    <fullName>JU_soshikitaisei__c</fullName>
    <label>組織体制/人員構成</label>
    <type>TextArea</type>
</CustomField>