force-app/main/default/objects/Account/fields/JU_STEPkigen__c.field-meta.xml
<CustomField>
    <fullName>JU_STEPkigen__c</fullName>
    <label>次のSTEP期限</label>
    <type>Date</type>
</CustomField>