force-app/main/default/objects/Account/fields/JU_StructuralCalculation__c.field-meta.xml
<CustomField>
    <fullName>JU_StructuralCalculation__c</fullName>
    <label>構造計算の方法</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>許容応力度計算</fullName>
            </value>
            <value>
                <fullName>仕様規定※壁量計算</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>