force-app/main/default/objects/Account/fields/JU_TacTarget__c.field-meta.xml
<CustomField>
    <fullName>JU_TacTarget__c</fullName>
    <defaultValue>false</defaultValue>
    <label>住環境戦略ターゲット</label>
    <type>Checkbox</type>
</CustomField>