force-app/main/default/objects/Account/fields/Ju_target_area__c.field-meta.xml
<CustomField>
    <fullName>Ju_target_area__c</fullName>
    <label>ターゲットエリア</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>東北</fullName>
            </value>
            <value>
                <fullName>関東</fullName>
            </value>
            <value>
                <fullName>中部</fullName>
            </value>
            <value>
                <fullName>関西</fullName>
            </value>
            <value>
                <fullName>中国</fullName>
            </value>
            <value>
                <fullName>四国</fullName>
            </value>
            <value>
                <fullName>九州</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>