force-app/main/default/objects/Account/fields/JU_TargetArea__c.field-meta.xml
<CustomField>
    <fullName>JU_TargetArea__c</fullName>
    <label>ターゲットエリア</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>全国</fullName>
            </value>
            <value>
                <fullName>北海道</fullName>
            </value>
            <value>
                <fullName>東北</fullName>
            </value>
            <value>
                <fullName>関東</fullName>
            </value>
            <value>
                <fullName>甲信越</fullName>
            </value>
            <value>
                <fullName>北陸</fullName>
            </value>
            <value>
                <fullName>東海</fullName>
            </value>
            <value>
                <fullName>関西</fullName>
            </value>
            <value>
                <fullName>中国</fullName>
            </value>
            <value>
                <fullName>四国</fullName>
            </value>
            <value>
                <fullName>九州沖縄</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>