force-app/main/default/objects/Account/fields/JU_tesseisitadiStatusK__c.field-meta.xml
<CustomField>
    <fullName>JU_tesseisitadiStatusK__c</fullName>
    <label>鋼製下地仮提案状況</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>JU_ProposalStatus</valueSetName>
    </valueSet>
</CustomField>