force-app/main/default/objects/Account/fields/JU_TG__c.field-meta.xml
<CustomField>
    <fullName>JU_TG__c</fullName>
    <label>TG_JU</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TG100未満</fullName>
            </value>
            <value>
                <fullName>TG100</fullName>
            </value>
            <value>
                <fullName>TG300</fullName>
            </value>
            <value>
                <fullName>TG1000</fullName>
            </value>
            <value>
                <fullName>IGHD</fullName>
            </value>
            <value>
                <fullName>HMR（ハウスメーカー）</fullName>
            </value>
            <value>
                <fullName>賃貸メイン</fullName>
            </value>
            <value>
                <fullName>流通店</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
            <value>
                <fullName>‐</fullName>
            </value>
            <value>
                <fullName>ウッドフレンズ</fullName>
            </value>
            <value>
                <fullName>タカカツホームズ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>