force-app/main/default/objects/Account/fields/JU_URL__c.field-meta.xml
<CustomField>
    <fullName>JU_URL__c</fullName>
    <label>URL_住環境_JU</label>
    <type>Url</type>
</CustomField>