force-app/main/default/objects/Account/fields/JU_Year1__c.field-meta.xml
<CustomField>
    <fullName>JU_Year1__c</fullName>
    <label>年度1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>