force-app/main/default/objects/Account/fields/Ju_yoshingendogaku__c.field-meta.xml
<CustomField>
    <fullName>Ju_yoshingendogaku__c</fullName>
    <label>与信限度額（円）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>