force-app/main/default/objects/Account/fields/Ju_zairai__c.field-meta.xml
<CustomField>
    <fullName>Ju_zairai__c</fullName>
    <label>在来</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>